--- a/app/views/degrees/_form.html.erb
+++ b/app/views/degrees/_form.html.erb
@@ -27,6 +27,11 @@
     <%= f.label :department_id %><br>
     <%= f.text_field :department_id %>
   </div>
+
+   <div class="field">
+    <%= f.label :Duration %><br>
+    <%= f.text_field :duration %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
