--- a/app/views/degrees/index.html.erb
+++ b/app/views/degrees/index.html.erb
@@ -9,6 +9,7 @@
       <th>Start</th>
       <th>End</th>
       <th>Department</th>
+      <th>Duration</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= degree.Start %></td>
         <td><%= degree.End %></td>
         <td><%= degree.department.Name %></td>
+        <td><%= degree.duration %></td>
         <td><%= link_to 'Show', degree %></td>
         <td><%= link_to 'Edit', edit_degree_path(degree) %></td>
         <td><%= link_to 'Destroy', degree, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -29,5 +31,5 @@
 </table>
 
 <br>
-
+<div style="padding-left:45%; font-size:16px;">
 <%= link_to 'New Degree', new_degree_path %>
