--- a/app/views/departments/new.html.erb
+++ b/app/views/departments/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Department</h1>
 
 <%= render 'form' %>
-
+<div style="padding-left:45%; font-size:16px;">
 <%= link_to 'Back', departments_path %>
