--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -42,5 +42,7 @@
 
 
 
+
+<div style="padding-left:45%; font-size:16px;">
 <%= link_to 'Edit', edit_department_path(@department) %> |
 <%= link_to 'Back', departments_path %>
