--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
+
 <html>
 <head>
 <title><%= @title %></title>
+<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 <%=csrf_meta_tag %>
+
 <%= render'layouts/stylesheets'%>
 <%= render'layouts/header'%>
 </head>
