--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Subject</h1>
 
 <%= render 'form' %>
-
+<div style="padding-left:45%; font-size:16px;">
 <%= link_to 'Show', @subject %> |
 <%= link_to 'Back', subjects_path %>
