--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -29,5 +29,5 @@
 </table>
 
 <br>
-
-<%= link_to 'New Subject', new_subject_path %>
+<div style="padding-left:45%; font-size:16px;">
+<%= link_to 'New Subject',new_subject_path %>
