--- a/app/assets/stylesheets/blueprint/print.css
+++ b/app/assets/stylesheets/blueprint/print.css
@@ -25,8 +25,21 @@ body {
  }
 
 hr {
- background:#ccc;color:#ccc;width:100%;height:2px;margin:2em 0;padding:0;border:none;}
-hr.space {background:#fff;color:#fff;visibility:hidden;}
+ background:#ccc;
+ color:#ccc;
+ width:100%;
+ height:2px;
+ margin:2em 0;
+ padding:0;
+ border:none;
+ }
+
+hr.space {
+ background:#fff;
+ color:#fff;
+ visibility:hidden;
+ }
+
 h1, h2, h3, h4, h5, h6 {font-family:"Helvetica Neue", Arial, "Lucida Grande", sans-serif;}
 code {font:.9em "Courier New", Monaco, Courier, monospace;}
 a img {border:none;}
