--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,3 +1,24 @@
 container            {
   width:            710px;
 }
+
+body            {
+background:            #3F75A2;
+}
+
+table, th, td {
+   border: 1px solid  blue;
+}
+
+header            {
+padding-top:           8px;
+}
+
+header            img            {
+padding:            1em;
+background:            #2F4F4F;
+}
+
+footer     {
+padding:     -3em;
+}
