--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -22,3 +22,17 @@ background:            #2F4F4F;
 footer     {
 padding:     -3em;
 }
+
+section {
+  margin-top: 2em;
+  font-size:  120%;
+  padding:    10px;
+  background: #ADD8E6;
+  margin-bottom:  4em;
+  margin-left:  4em;
+  margin-right: 4em;
+}
+
+section h1 {
+  font-size: 200%;
+}
