--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -10,17 +10,18 @@ table, th, td {
    border: 1px solid  blue;
 }
 
-header            {
-padding-top:           8px;
+header  {
+  padding-top: 8px;
 }
 
-header            img            {
-padding:            1em;
-background:            #2F4F4F;
+
+header  img {
+  padding:  1em;
+  background: #2F4F4F;
 }
 
-footer     {
-padding:     -3em;
+footer  {
+  padding:  -3em;
 }
 
 section {
@@ -35,4 +36,47 @@ section {
 
 section h1 {
   font-size: 200%;
+}
+
+
+/*            Links            */
+a            {
+color:            #09c;
+text-decoration:            none;
+}
+a:hover            {
+color:            #069;
+text-decoration:            underline;
+}
+a:visited            {
+color:            #069;
+}
+< />
+/*            Navigation            */
+nav            {
+float:            right;
+}
+nav            {
+background-color:            #ADD8E6;
+padding:            2.5            -5em;
+white-space:            nowrap;
+}
+nav            ul            {
+margin:            0;
+padding:           ;
+}
+nav            ul            li            {
+list-style-type:            none;
+display:            inline-block;
+padding:            0.2em            0;
+}
+nav            ul            li            a            {
+padding:            0            5px;
+font-weight:            bold;
+}
+nav            ul            li            a:visited            {
+color:            #09c;
+}
+nav            ul            li            a:hover            {
+text-decoration:            underline;
 }
