--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -57,13 +57,13 @@ a:visited {
 
 /*            Navigation            */
 
-
+</>
 /* Navigation */
 nav {
 float: right;
 }
 nav {
-background-color: white;
+background-color: #ADD8E6;
 padding: 0 0.7em;
 white-space: nowrap;
 }
