--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -17,10 +17,10 @@
       <th>Contact</th>
       <th>Email</th>
       <th>Department</th>
-      <th>Admission</th>
+      <th>Reg_No</th>
       <th>Degree</th>
       <th>Subject</th>
-      <th>Faculty</th>
+      <th>Teacher</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -40,7 +40,7 @@
         <td><%= student.Contact %></td>
         <td><%= student.Email %></td>
         <td><%= student.department.Name %></td>
-        <td><%= student.admission.Firstname%></td>
+        <td><%= student.admission.Registration%></td>
         <td><%= student.degree.Name%></td>
         <td><%= student.subject.Name%></td>
         <td><%= student.faculty.Firstname%></td>
