--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -12,36 +12,24 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :Name %><br>
-    <%= f.text_field :Name %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :Chairman %><br>
-    <%= f.text_field :Chairman %>
+    <%= f.label :Chairperson %><br>
+    <%= f.text_field :Chairperson %>
   </div>
   <div class="field">
-    <%= f.label :Examiner %><br>
-    <%= f.text_field :Examiner %>
-  </div>
-  <div class="field">
-    <%= f.label :Resultmaker %><br>
-    <%= f.text_field :Resultmaker %>
-  </div>
-  <div class="field">
-    <%= f.label :Classes %><br>
-    <%= f.number_field :Classes %>
+    <%= f.label :Contact %><br>
+    <%= f.text_field :Contact %>
   </div>
   <div class="field">
     <%= f.label :Email %><br>
     <%= f.text_field :Email %>
   </div>
   <div class="field">
-    <%= f.label :Contact %><br>
-    <%= f.number_field :Contact %>
-  </div>
-<div class="field">
     <%= f.label :Fax %><br>
-    <%= f.number_field :fax %>
+    <%= f.text_field :Fax %>
   </div>
   <div class="actions">
     <%= f.submit %>
