--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,10 +1,3 @@
-
-<% form_tag departments_path do %>
-  <p>
-    <%= text_field_tag :search %>
-    <%= submit_tag "Search" %>
-  </p>
-<% end %>
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Departments</h1>
@@ -13,29 +6,23 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Chairman</th>
-      <th>Examiner</th>
-      <th>Resultmaker</th>
-      <th>Classes</th>
-      <th>Email</th>
+      <th>Chairperson</th>
       <th>Contact</th>
+      <th>Email</th>
       <th>Fax</th>
-      <th colspan="3">Navigation</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @departments.each do |department| %>
       <tr>
-        <td><%= department.Name %></td>
-        <td><%= department.Chairman %></td>
-        <td><%= department.Examiner %></td>
-        <td><%= department.Resultmaker %></td>
-        <td><%= department.Classes %></td>
-        <td><%= department.Email %></td>
+        <td><%= department.name %></td>
+        <td><%= department.Chairperson %></td>
         <td><%= department.Contact %></td>
-         <td><%= department.fax %></td>
-        <td><%= link_to 'Show', department%></td>
+        <td><%= department.Email %></td>
+        <td><%= department.Fax %></td>
+        <td><%= link_to 'Show', department %></td>
         <td><%= link_to 'Edit', edit_department_path(department) %></td>
         <td><%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -44,5 +31,5 @@
 </table>
 
 <br>
-<div style="padding-left:45%; font-size:16px;">
+
 <%= link_to 'New Department', new_department_path %>
