--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -2,32 +2,12 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @department.Name %>
+  <%= @department.name %>
 </p>
 
 <p>
-  <strong>Chairman:</strong>
-  <%= @department.Chairman %>
-</p>
-
-<p>
-  <strong>Examiner:</strong>
-  <%= @department.Examiner %>
-</p>
-
-<p>
-  <strong>Resultmaker:</strong>
-  <%= @department.Resultmaker %>
-</p>
-
-<p>
-  <strong>Classes:</strong>
-  <%= @department.Classes %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @department.Email %>
+  <strong>Chairperson:</strong>
+  <%= @department.Chairperson %>
 </p>
 
 <p>
@@ -36,13 +16,14 @@
 </p>
 
 <p>
-  <strong>Fax:</strong>
-  <%= @department.fax %>
+  <strong>Email:</strong>
+  <%= @department.Email %>
 </p>
 
+<p>
+  <strong>Fax:</strong>
+  <%= @department.Fax %>
+</p>
 
-
-
-<div style="padding-left:45%; font-size:16px;">
 <%= link_to 'Edit', edit_department_path(@department) %> |
 <%= link_to 'Back', departments_path %>
