--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,4 @@
 <h1><center><b><u>	<p style="color:blue;">UNIVERSITY DEPARTMENT<br><br>MANAGEMENT SYSTEM</br> </p>
 <br><br><br><br><br><br><bottom><br><title><br><%= @title %></br></title></bottom></br></br></br></br></br></br></br>
 </head>
+</nav>
