--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -78,6 +78,7 @@ padding: 0.2em 0;
 }
 nav ul li a {
 padding: 0 5px;
+font-size: 130%;
 font-weight: bold;
 }
 nav ul li a:visited {
@@ -89,7 +90,7 @@ text-decoration: underline;
 
 
 /*            Sign            up            button            */
-a.signup_button            {
+signup_button            {
 margin-left:            auto;
 margin-right:            auto;
 display:            block;
@@ -97,9 +98,9 @@ text-align:            center;
 width:            190px;
 color:            #4682B4;
 background:            #ADD8E6;
-font-size:            120%;
+font-size:          200%;
 font-weight:            bold;
-padding:            20px;
+padding:           50px;
 }
 /*            Round            corners            */
 .round            {
