--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -26,7 +26,7 @@ footer  {
 
 section {
   margin-top: 2em;
-  font-size:  120%;
+  font-size:  150%;
   padding:    10px;
   background: #ADD8E6;
   margin-bottom:  4em;
@@ -78,7 +78,7 @@ padding: 0.2em 0;
 }
 nav ul li a {
 padding: 0 5px;
-font-size: 130%;
+font-size: 120%;
 font-weight: bold;
 }
 nav ul li a:visited {
@@ -90,7 +90,7 @@ text-decoration: underline;
 
 
 /*            Sign            up            button            */
-signup_button            {
+a.signup_button            {
 margin-left:            auto;
 margin-right:            auto;
 display:            block;
@@ -98,9 +98,9 @@ text-align:            center;
 width:            190px;
 color:            #4682B4;
 background:            #ADD8E6;
-font-size:          200%;
+font-size:            120%;
 font-weight:            bold;
-padding:           50px;
+padding:           20px;
 }
 /*            Round            corners            */
 .round            {
