--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
 <%= form_for(@user) do |f| %>
 <%= render 'shared/error_messages', object: f.object %>
 <%= f.label :name %>
-<%= f.name_field :name, class: 'form-control' %>
+<%= f.text_field :name, class: 'form-control' %>
 <%= f.label :email %>
 <%= f.email_field :email, class: 'form-control' %>
 <%= f.label :password %>
